RESOLVED FIXED 73056
Cannot select RTL text inside LTR text from right to left by a mouse drag
https://bugs.webkit.org/show_bug.cgi?id=73056
Summary Cannot select RTL text inside LTR text from right to left by a mouse drag
Ryosuke Niwa
Reported 2011-11-23 16:03:25 PST
If we have: aאבגb and select "אבג" from the right to the left by a mouse drag, then "בג" will be selected first instead of "א".
Attachments
fixes the bug (5.44 KB, patch)
2011-11-23 16:29 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2011-11-23 16:29:26 PST
Created attachment 116450 [details] fixes the bug
Ryosuke Niwa
Comment 2 2011-11-28 14:05:07 PST
Ping reviewers. This is a no-brainer fix (of my bug :( ).
Eric Seidel (no email)
Comment 3 2011-11-28 18:54:06 PST
Comment on attachment 116450 [details] fixes the bug LGTM. You might want mitz or justin's stamp, but this looks right.
Ryosuke Niwa
Comment 4 2011-11-30 15:27:11 PST
Comment on attachment 116450 [details] fixes the bug Clearing flags on attachment: 116450 Committed r101561: <http://trac.webkit.org/changeset/101561>
Ryosuke Niwa
Comment 5 2011-11-30 15:27:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.