Cannot select RTL text inside LTR text from right to left by a mouse drag https://bugs.webkit.org/show_bug.cgi?id=73056

Reviewed by Eric Seidel.

Source/WebCore:

The bug was caused by positionAtRightBoundaryOfBiDiRun using current inline box's offset
even when creating a position with previous inline box. Fixed the bug by using the correct offset.

* editing/RenderedPosition.cpp:
(WebCore::RenderedPosition::positionAtLeftBoundaryOfBiDiRun):
(WebCore::RenderedPosition::positionAtRightBoundaryOfBiDiRun):

LayoutTests:

Added a test case to ensure WebKit can select "A" in "aCBAb" when selecting text by a mouse drag
from the position between "A" and "b" to the position between "B" and "A".

* editing/selection/select-bidi-run-expected.txt:
* editing/selection/select-bidi-run.html:


Canonical link: https://commits.webkit.org/90038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101561 268f45cc-cd09-0410-ab3c-d52691b4dbfc